[gd_scene load_steps=13 format=3 uid="uid://cane082o6ydy1"]

[ext_resource type="Script" path="res://Scripts/Wheely.gd" id="1_nnpe2"]
[ext_resource type="Texture2D" uid="uid://bljwwr3by46b" path="res://Art/f1_bg.png" id="2_eqo14"]
[ext_resource type="FontFile" uid="uid://yx8eo66u0ce3" path="res://pixel-comic-sans-undertale-sans-font.ttf" id="2_n27a1"]
[ext_resource type="Texture2D" uid="uid://dn0kg7pour2nt" path="res://Art/button_att.png" id="3_mb56g"]
[ext_resource type="Texture2D" uid="uid://bp00625gpgq8a" path="res://Art/button_mag.png" id="4_tj7th"]
[ext_resource type="Texture2D" uid="uid://bevfmmcra5nck" path="res://Art/button_hea.png" id="5_aov0y"]
[ext_resource type="Texture2D" uid="uid://bqcm8ibb1iyi0" path="res://Art/button_run.png" id="6_omydx"]
[ext_resource type="Texture2D" uid="uid://qm30p4vxdxbn" path="res://Art/placeholder_student_battleicon.png" id="7_hpp67"]
[ext_resource type="Texture2D" uid="uid://b251cv06squc4" path="res://Art/button_thr.png" id="7_kwelr"]
[ext_resource type="Texture2D" uid="uid://2eotmj1n7h24" path="res://Art/button_sma.png" id="8_lo1xr"]
[ext_resource type="Texture2D" uid="uid://cshtwn0i421i7" path="res://Art/placeholder_student_potrait.png" id="8_uxewn"]
[ext_resource type="Texture2D" uid="uid://ddemsdbmlqxnd" path="res://Art/back.png" id="10_3fryi"]

[node name="Node" type="Node"]
script = ExtResource("1_nnpe2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 3.0
offset_top = 4.0
offset_right = 1923.0
offset_bottom = 1084.0
texture = ExtResource("2_eqo14")

[node name="Log" type="Label" parent="."]
offset_left = 11.0
offset_top = 82.0
offset_right = 712.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n27a1")
theme_override_font_sizes/font_size = 60

[node name="Attack" type="TextureButton" parent="."]
offset_left = 755.0
offset_top = 578.0
offset_right = 1212.0
offset_bottom = 776.0
texture_normal = ExtResource("3_mb56g")
stretch_mode = 5

[node name="Magic" type="TextureButton" parent="."]
offset_left = 778.0
offset_top = 776.0
offset_right = 1189.0
offset_bottom = 974.0
texture_normal = ExtResource("4_tj7th")
stretch_mode = 5

[node name="Heal" type="TextureButton" parent="."]
visible = false
offset_left = 542.0
offset_top = 657.0
offset_right = 934.0
offset_bottom = 859.0
texture_normal = ExtResource("5_aov0y")
stretch_mode = 4

[node name="Sp1" type="TextureButton" parent="."]
visible = false
offset_left = 927.0
offset_top = 657.0
offset_right = 1320.0
offset_bottom = 856.0
texture_normal = ExtResource("7_kwelr")
stretch_mode = 4

[node name="Sp2" type="TextureButton" parent="."]
visible = false
offset_left = 536.0
offset_top = 849.0
offset_right = 946.0
offset_bottom = 1048.0
texture_normal = ExtResource("8_lo1xr")
stretch_mode = 4

[node name="JohnACG" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = 507.0
offset_right = 537.0
offset_bottom = 1084.0
texture = ExtResource("7_hpp67")

[node name="Wheely" type="TextureRect" parent="."]
offset_left = 763.0
offset_top = 108.0
offset_right = 1194.0
offset_bottom = 553.0
texture = ExtResource("8_uxewn")

[node name="EnemyDisplay" type="Label" parent="."]
offset_left = 621.0
offset_top = 26.0
offset_right = 1029.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n27a1")
theme_override_font_sizes/font_size = 76
text = "Wuhoh"

[node name="PlayerDisplay" type="Label" parent="."]
offset_left = 8.0
offset_top = 371.0
offset_right = 521.0
offset_bottom = 507.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n27a1")
theme_override_font_sizes/font_size = 60
text = "YOU FUCKED UP"

[node name="ELog" type="Label" parent="."]
offset_left = 1272.0
offset_top = 156.0
offset_right = 1919.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n27a1")
theme_override_font_sizes/font_size = 40

[node name="Back" type="TextureButton" parent="."]
visible = false
offset_left = 1322.0
offset_top = 866.0
offset_right = 1577.0
offset_bottom = 1047.0
texture_normal = ExtResource("10_3fryi")
stretch_mode = 4

[node name="Run" type="TextureButton" parent="."]
visible = false
offset_left = 928.0
offset_top = 852.0
offset_right = 1320.0
offset_bottom = 1054.0
texture_normal = ExtResource("6_omydx")
stretch_mode = 4

[connection signal="pressed" from="Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Sp1" to="." method="_on_sp_1_pressed"]
[connection signal="pressed" from="Sp2" to="." method="_on_sp_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_run_pressed"]
